<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Orchestrate</string>
    <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
    <string name="event">Event Management</string>
    <string name="search_hint">Search Hint</string>
    
    
    <string name="str_img1">Image1</string>
    <string name="str_img2">Image2</string>
    <string name="str_img3">Image3</string>
    <string name="str_img4">Image4</string>
    <string name="str_img5">Image5</string>
    
    <string name="signup">Signup</string>
    <string name="signin">SignIn</string>
    
    <string name="UserName">User Name</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>  
    <string name="CreateAccount">Create Account</string>   
    <string name="Branch">Branch</string>   
    <string name="Email">Email</string>   
    <string name="Phone">Phone</string>   
    <string name="Male">Male</string> 
    <string name="Female">Female</string>  
    
    <string name="User_Name">User Name</string>   
    <string name="password">Password</string>
    <string name="LoginAccount">Login</string>
    
    <string name="Sign_In">Login</string>
    <string name="admin">Admin</string>
    <string name="Gender">Gender</string> 
    
    <string name="event_name_display">Bobby</string> 
    <string name="created_on">10 minutes ago</string> 
    <string name="event_desc">Status From Bobby</string>  
    <string name="labelTimeline">Timeline</string> 
     
    <string name="Cancel">Cancel</string>
    <string name="description">Description of Event</string>
    <string name="organisers">Organisers</string>
    <string name="contacts">Contacts</string>
    <string name="create_event">Create Event</string>
    
    <string name="EventName">Event Name</string>
    <string name="Description">Description</string>
    <string name="Date">Date</string>
    <string name="Venue">Venue</string>
    <string name="Prize">Prize</string>
    <string name="ShortDescription">Short Description</string>
    <string name="Create_Event">Create Event</string>
    <string name="Organizer">Organizers</string>
     <string name="venue">Venue</string>
     <string name="prize">Prize</string>
    
    <string name="ButtonBack">Back</string>
    <string name="ButtonDelete">Delete</string>
    <string name="ButtonModify">Modify</string>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Show Users</item>
        <item>Sign Out</item>
        <!-- <item>Gallery</item>
        <item>Fifth</item>
        <item>Sixth</item> -->
    </string-array>
<string-array name="nav_drawer_items_users">
        <item>Home</item>
        <item>Profile</item>
        <item>About</item>
        <item>Event Suggestion</item>
        <item>Societies</item>
         <item>Logout</item>
       <!-- <item>Sixth</item> -->
    </string-array>
    <array name="nav_drawer_icons">
        <item>@drawable/home</item>
        <item>@drawable/userprofile</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/suggestion</item>
        <item>@drawable/ic_launcher</item>
      <item>@drawable/logout</item>
        <!--<item>@drawable/ic_launcher</item> -->

    </array>
    <array name="nav_drawer_icons_admin">
        <item>@drawable/home</item>
        <item>@drawable/group</item>
        <item>@drawable/logout</item>
        

    </array>
    

     <string name="UserSociety">Society</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="join_event">Join Event</string>
    <string name="Modify_Event">Modify Event</string>
    <string name="timeline">Events</string>
    <string name="Join_Event">Join Event</string>
    <string name="ButtonUpdate">Update Profile</string>
    <string name="ProfileUpdate">Update Profile</string>       
    <string name="labelUsers">Users</string>
    <string name="about">Keep yourself updated with what is going on in GNE! Multiple event, workshop, simulataneous seminar and audition, 
                         it is now easy to have a swindle sheet of thr hustle going on in campus. No more need to go 
                         through a multitude of posters, just browse our app to know anything and everything you ever wanted to know 
                         about the events going on in your campus. Now that you\'ve our app, relax and enjoy this experience. More to come soon.</string>
    <string name="about_gne">To hone the assorted talents that the students in GNE possess, the college
                             is abounding with societies from the ones like Technical team to the Poetry Club and the Cultural Society.
                             Being at GNE and doing just the acdemics well won\'t suffice, these societies unveil the true potential 
                             of students in various fields.  </string>
    <string name="society">Societies</string>
    <string name="contentImage">Societies</string>
    <string name="iste">The Indian Society for Technical Education (ISTE) is the leading National Professional non-profit
                        making Society for the Technical Education System in our country with the motto of 
                        Career Development of Teachers and Personality Development of Students 
                        and overall development of our Technical Education System.  </string>
    <string name="scie">The Institution of Engineers (India) (IEI), was established in 1920 and was sanctioned the Royal Charter 
                        in 1935, laying down the principal role of the to be of a learned society promoting the
                        advancement of the science and practice in different fields of engineering. The Royal Charter reflects the 
                        spirit in which engineering disciplines are to be pursued. </string>   
    <string name="sae">SAEINDIA is the leading resource for mobility technologyof India. 
                       As an individual member driven society of mobility practitioners the ownership of SAEINDIA wrests with its
                       members who are Individuals from the mobility community, 
                        which includes Engineers Executives from Industry, Government Officials, Academics and Students</string>
</resources>
