<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:background="#000">
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/textUserName"
			android:text="@string/event_name_display"
			android:textColor="#fff"
			android:textStyle="bold"></TextView>
		<TextView
			android:layout_height="wrap_content"
			android:id="@+id/textJoined"
			android:text="@string/created_on"
			android:layout_gravity="right"
			android:gravity="right"
			android:layout_width="fill_parent"
			android:textColor="#fff"
			></TextView>
	</LinearLayout>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/textEventName"
		android:text="@string/event_desc"
		android:textColor="#fff"></TextView>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/textEventSocietyJoin"
		android:text="@string/event_desc"
		android:textColor="#fff"></TextView>

</LinearLayout>