<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000" >

    <Button
        android:id="@+id/btnsignin"
        android:layout_width="100dp"
        android:layout_height="34dp"
        android:text="@string/signin"
        android:background="@drawable/mybutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

<ViewFlipper
    android:id="@+id/flipper1"
    android:layout_width="340dp"
    android:layout_height="252dp"
    android:flipInterval="3000"
    android:layout_marginTop="20dp"
    android:inAnimation="@anim/slide_in_right"
    android:outAnimation="@anim/slide_out_left"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true">

    <ImageView
        android:layout_width="340dp"
        android:layout_height="252dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/str_img3"
        android:src="@drawable/event1"
        android:layout_marginTop="20dp"
        android:id="@+id/imageView4"
        android:layout_above="@+id/btnadmin"
        android:layout_toLeftOf="@+id/btnadmin"
        android:layout_toStartOf="@+id/btnadmin" />

    <ImageView
        android:layout_width="340dp"
        android:layout_height="252dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/str_img2"
        android:src="@drawable/car"
        android:layout_marginTop="20dp"
        android:id="@+id/imageView5"
        android:layout_above="@+id/btnadmin"
        android:layout_toLeftOf="@+id/btnadmin"
        android:layout_toStartOf="@+id/btnadmin" />

    <ImageView
        android:layout_width="340dp"
        android:layout_height="252dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/str_img1"
        android:src="@drawable/evento"
        android:layout_marginTop="20dp"
        android:id="@+id/imageView"
        android:layout_alignTop="@+id/imageView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</ViewFlipper>

<Button
    android:id="@+id/btnadmin"
    android:layout_width="34dp"
    android:layout_height="34dp"
    android:background="@drawable/admin_icon"

    android:layout_alignParentBottom="true"
    android:layout_alignRight="@+id/imageView3"
    android:layout_alignEnd="@+id/imageView3" />

<Button
    android:id="@+id/btnsignup"
    android:layout_width="100dp"
    android:background="@drawable/mybutton"
    android:layout_height="34dp"
    android:text="@string/signup"
    android:layout_alignTop="@+id/btnsignin"
    android:layout_centerHorizontal="true" />



    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/imageView2"
        android:layout_marginTop="10dp"
        android:src="@drawable/icon_logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="115dp"
        android:layout_marginRight="10dp"
        android:id="@+id/imageView3"
        android:src="@drawable/logo_des"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
