<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <!-- Add content here -->
<LinearLayout
	
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:background="#000">
	 <TextView
       android:id="@+id/titledescription1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="User Profile "
       android:textAppearance="?android:attr/textAppearanceLarge"
       android:textStyle="bold"
       android:textColor="@color/darkorange"
       android:layout_gravity="center"
         />
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp" >
    <TextView
       android:id="@+id/UserNameLabel"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Name: "
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff"/>
     <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/Username"
			android:text="@string/event_name_display"
			android:textColor="@color/darkblue"
			android:textStyle="bold"
			 android:textAppearance="?android:attr/textAppearanceMedium"
         ></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp" >

      <TextView
        android:id="@+id/branchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Branch: "
         android:textAppearance="?android:attr/textAppearanceMedium"
          android:textColor="#fff"/>

      <TextView
			android:layout_height="wrap_content"
			android:id="@+id/textBranch"
			android:text="@string/created_on"
			android:layout_width="fill_parent"
			android:textColor="@color/darkblue"
			 android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp" >
 <TextView
       android:id="@+id/emailLabel"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Email: "
        android:textAppearance="?android:attr/textAppearanceMedium"
     android:textColor="#fff"/>

<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/textEmailid"
		android:text="@string/event_desc"
		android:textColor="@color/darkblue"
		 android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
    </LinearLayout>
		
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp" >
 <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Phone: "
         android:textAppearance="?android:attr/textAppearanceMedium"
     android:textColor="#fff"/>

 

      <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/textPhone"
		android:text="@string/description"
		android:textColor="@color/darkblue"
		 android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
    </LinearLayout>

	<LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp" >
<TextView

        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password: " 
         android:textAppearance="?android:attr/textAppearanceMedium"
    android:textColor="#fff"/>

 

      <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/textPassword"
		android:text="@string/venue"
		android:textColor="@color/darkblue"
		 android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
    </LinearLayout>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp" >

  <TextView
      android:id="@+id/genderLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
       android:text="Gender: "
        android:textAppearance="?android:attr/textAppearanceMedium"
      android:textColor="#fff"/>

 <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/textGender"
		android:text="@string/prize"
		android:textColor="@color/darkblue"
		 android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
    </LinearLayout>
  

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/Backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/ButtonBack" 
        android:background="@drawable/mybutton"/>

    

    <Button
        android:id="@+id/UpdateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/ButtonUpdate" 
        android:background="@drawable/mybutton"/>

</RelativeLayout>
</LinearLayout>
</FrameLayout>

    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="#000"
        android:dividerHeight="1dp"
        android:background="#000"/>
</android.support.v4.widget.DrawerLayout>