<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000">
        <!-- Add content here -->
<ScrollView 
    android:layout_width="fill_parent" 
android:layout_height="fill_parent" >
<LinearLayout  
android:layout_width="match_parent" 
android:layout_height="wrap_content"
android:orientation="vertical" 
android:paddingBottom="16dp"
android:paddingTop="16dp"
android:paddingLeft="16dp"
android:paddingRight="16dp"
android:background="#000">
 <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp" >
    <TextView
       android:id="@+id/titleLabel"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Event: "
       android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff"/>
<EditText 
android:id="@+id/editTextEventName" 
android:hint="@string/EventName" 
android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:inputType="textCapSentences"
    android:textColor="#fff">
  <requestFocus /> 
  </EditText>
  </LinearLayout>
  <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp" >
    <TextView
       android:id="@+id/titleUserSocietyJoin"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Society: "
       android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff"/>
  <EditText android:id="@+id/editUserSocietyJoin"
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content" 
      android:hint="@string/UserSociety"
      android:inputType="textCapSentences"
      android:textColor="#fff"/> </LinearLayout>
  <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp" >
    <TextView
       android:id="@+id/titleUser"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="User Name: "
       android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff"/>

  <EditText android:id="@+id/editUserName" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content" 
      android:hint="@string/UserName"
      android:inputType="textCapSentences"
      android:textColor="#fff"/> </LinearLayout>
      <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp" >
    <TextView
       android:id="@+id/titleDate"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Date: "
       android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff"/>

      <EditText android:id="@+id/editTextDate" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content" 
      android:hint="@string/Date" 
      android:inputType="date"
          android:textColor="#fff"/></LinearLayout>
      
   <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp" >
    <TextView
       android:id="@+id/titlePhone"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Contact: "
       android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff"/>
       <EditText android:id="@+id/editTextUserContact" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content" 
      android:hint="@string/contacts" 
      android:inputType="phone"
           android:textColor="#fff"
      /> </LinearLayout>
      
 
  <Button 
      android:id="@+id/buttonJoinEvent" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content" 
      android:text="@string/Join_Event" 
      android:layout_marginBottom="60dp"
       android:background="@drawable/mybutton" /> 
  
  </LinearLayout></ScrollView>
   </FrameLayout>

    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="#000"
        android:dividerHeight="1dp"
        android:background="#000"/>
</android.support.v4.widget.DrawerLayout>